src/scss/homeStyle.scss
@use 'colors' as c;

.logo {
  font-size: 2em;
  flex: 0 1 25%;
}

.summaryAbout,
.issueSummary,
.CTA {
  margin: 0 auto;
  padding: 2em 50px;
  max-width: 1920px;
}
.hero {
  padding: 2em 50px;
  max-width: 1920px;
  margin: 0 auto;

  .heroParagraph {
    margin: 0 auto;
    max-width: 800px;
    text-align: center;
  }

  & #{&}Image {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;

    img {
      width: 100%;
      max-width: 300px;
      object-fit: contain;
    }
  }
  .heroCta__SignUpButton {
    background-color: transparent;
    border-radius: 20px;
    border: 2px solid c.$primary;
    font-weight: 600;
    color: c.$primary;
  }
  .heroCta__DonateButton {
    background-color: c.$primary;
    border-radius: 20px;
    border: 2px solid transparent;
    color: #fff;
    font-weight: 600;
  }
}

.summaryAbout {
  margin-top: 2em;
  padding-top: 2.5em;
  background-color: c.$primary;
  color: #fff;
  text-align: center;
  overflow: hidden;
  position: relative;
  button {
    background-color: #fff;
    border-radius: 20px;
    border: none;
    color: c.$primary;
  }
  .aboutImg {
    position: absolute;
    align-self: center;
    object-position: 0 -100px;
    width: 600px;
    height: 250px;
    object-fit: cover;
  }
}

.issueSummary {
  text-align: center;
}

.sumText {
  height: 100%;
  display: flex;
  flex-flow: column wrap;
  align-content: center;
  justify-content: center;
  padding: 0 10%;
}

.CTA {
  text-align: center;
  color: #fff;

  h2,
  label {
    color: #fff;
  }
  .CTA__SignUpButton {
    background-color: transparent;
    border-radius: 20px;
    border: 2px solid #fff;
    font-weight: 600;
    color: #fff;
  }
  .CTA__DonateButton {
    background-color: #fff;
    border-radius: 20px;
    border: 2px solid transparent;
    color: c.$primary;
    font-weight: 600;
  }
}

.codeBehindCTA {
  background-color: c.$primary;
}

@media only screen and (max-width: 768px) {
  .ant-layout-header {
    padding: 0 25px;
  }
  .logo {
    font-size: 1.5em;
  }
  .hero,
  .summaryAbout,
  .issueSummary,
  .CTA {
    padding: 2em 25px;
  }

  .heroImage > img {
    margin-top: 2em;
    height: 200px;
  }
}

@media only screen and (max-width: 400px) {
  .heroImage > img {
    width: 100%;
  }
}

